crates/graphql-schema-validation/tests/validation_errors/errors@bad_syntax.snap
---
source: crates/graphql-schema-validation/tests/validation_tests.rs
expression: displayed
input_file: crates/graphql-schema-validation/tests/validation_errors/bad_syntax.graphql
---
  × Syntax error:  --> 1:1
  │   |
  │ 1 | "No pos, wow"
  │   | ^---
  │   |
  │   = expected type_system_definition
